--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:theme="@style/AppTheme"
-    tools:ignore="AllowBackup,DataExtractionRules">
+    tools:ignore="AllowBackup,DataExtractionRules"
+    android:usesCleartextTraffic="true">
 
     <activity
       android:name=".controller.LoginActivity"
